--- a/css/styles.css
+++ b/css/styles.css
@@ -73,3 +73,11 @@ h2 {
   text-align: center;
 
 }
+
+@media screen and (max-width: 1240px) {
+  body {
+    background-color: black;
+    color: white;
+
+  }
+}
